Add news images and word

--- a/Projects.html
+++ b/Projects.html
@@ -127,126 +127,167 @@
 
 
     <!-- Page Header Start -->
-    <div class="container-fluid page-header-album mb-5 wow fadeIn" data-wow-delay="0.1s">
+    <div class="container-fluid page-header-madinat mb-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container text-center" style="direction: ltr;">
-            <h1 class="display-4 text-white animated slideInDown mb-4"> صور مبادرة كرتونة الخير </h1>
+            <h1 class="display-4 text-white animated slideInDown mb-4"> مشروع مدينة الخير</h1>
             <nav aria-label="breadcrumb animated slideInDown">
                 <ol class="breadcrumb justify-content-center mb-0">
-                    <li class="breadcrumb-item text-primary active" aria-current="page"> صور المبادرات</li>
-                    <li class="breadcrumb-item"><a class="text-white" href="#">البوم صور</a></li>
-                    <li class="breadcrumb-item"><a class="text-white" href="#">المركز الاعلامى</a></li>
+                    <li class="breadcrumb-item text-primary active" aria-current="page"> مدينة الخير </li>
+                    <li class="breadcrumb-item"><a class="text-white" href="#">حالات تحتاج إلى مشاركتك بالمال</a></li>
+                    <li class="breadcrumb-item"><a class="text-white" href="#">مشروعات</a></li>
                 </ol>
             </nav>
         </div>
     </div>
     <!-- Page Header End -->
 
-    <!-- Training Start -->
-    <div class="container-fluid training overflow-hidden bg-light py-5">
+    <!-- Causes Start -->
+    <div class="container-xxl bg-light my-5 py-5">
         <div class="container py-5">
-            <div class="section-title text-center mb-5 wow fadeInUp" data-wow-delay="0.1s">
-                <div class="sub-style">
-                    <h5 class="sub-title text-primary px-3">ملفات الصورة للمبادرات و المشروعات</h5>
-                </div>
-                <!-- <h1 class="display-5 mb-4"></h1>
-                <p class="mb-0"></p> -->
+            <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
+                <div class="d-inline-block rounded-pill bg-secondary text-primary py-1 px-3 mb-3">أنشطة جمعية مهندسى البترول
+                    والتعدين والغاز</div>
+                <h4 class="mb-5">
+                    حالات تحتاج إلى مشاركتك بالمال (صدقات أو زكاة) كما يمكنك أيضًا التبرع بالمساعدة لأحد الحالات أو أكثر من
+                    حالة.
+                </h4>
             </div>
-            <div class="row g-4">
-                <div class="col-lg-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.1s">
-                    <div class="training-item">
-                        <div class="training-inner">
-                            <img src="img/images/كرتونة-الخير/WhatsApp Image 2024-12-30 at 6.23.13 AM.jpeg" class="img-fluid w-100 rounded" alt="Image">
-                            <!-- <div class="training-title-name">
-                                <a href="#" class="h4 text-white mb-0">IELTS</a>
-                                <a href="#" class="h4 text-white mb-0">Coaching</a>
-                            </div> -->
+            <div class="row g-4 justify-content-center">
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                    <div
+                        class="causes-item d-flex flex-column bg-white border-top border-5 border-primary rounded-top overflow-hidden h-100">
+                        <div class="text-center p-4 pt-0">
+                            <div class="d-inline-block bg-primary text-white rounded-bottom fs-5 pb-1 px-3 mb-4">
+                                <small> مشروع مدينة الخير</small>
+                            </div>
+                            <h5 class="mb-3" style="
+                                                background-color: #ededed;
+                                                margin: 0px;
+                                                padding: 10px;
+                                                border-radius: 9px;">
+                                مشروع إنشاء مجمعات صناعية تشمل العديد من المجالات الحرفية
+                            </h5>
+                            <p></p>
+                            <div class="causes-progress bg-light p-3 pt-2">
+                                <div class="d-flex justify-content-between">
+                                    <p class="text-dark">£1,000,000 <small class="text-body">الهدف</small></p>
+                                    <p class="text-dark">£0 <small class="text-body">تم توفير</small></p>
+                                </div>
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0"
+                                        aria-valuemax="100">
+                                        <span>0%</span>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                        <div class="training-content bg-primary2 rounded-bottom p-4">
-                            <a href="#">
-                                <h4 class="text-white">كرتونة الخير</h4>
-                            </a>
-                            <p class="text-white-51">
-                                مشاركة الشيخ احمد ترك فى مبادرة كرتونة الخير
+                        <div class="position-relative mt-auto">
+                            <img class="img-fluid" src="img/images/activte/2024-638553628873905114-390.jpeg" alt="">
+                            <div class="causes-overlay">
+                                <a class="btn btn-outline-primary" href="madinat-alkhayr.html">
+                                    أقراء المزيد
+                                    <div class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2">
+                                        <i class="fa fa-arrow-left"></i>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                    <div
+                        class="causes-item d-flex flex-column bg-white border-top border-5 border-primary rounded-top overflow-hidden h-100">
+                        <div class="text-center p-4 pt-0">
+                            <div class="d-inline-block bg-primary text-white rounded-bottom fs-5 pb-1 px-3 mb-4">
+                                <small>دار ضيافة</small>
+                            </div>
+                            <h5 class="mb-3" style="
+                                                background-color: #ededed;
+                                                margin: 0px;
+                                                padding: 10px;
+                                                border-radius: 9px;">
+                                دار ضيافة
+                            </h5>
+                            <p>
+                                <i class="fa fa-check-circle me-2"></i> إقامة مجانية
+                                <i class="fa fa-check-circle me-2"></i> تقديم الوجبات اليومية
+                                <i class="fa fa-check-circle me-2"></i> إقامة مرافق
                             </p>
-                            <a class="btn btn-primary rounded-pill text-white p-2" href="photo-kirtunat-alkhayr.html"> البوم صور المبادرة <i class="fa fa-arrow-left"></i></a>
+                            <div class="causes-progress bg-light p-3 pt-2">
+                                <div class="d-flex justify-content-between">
+                                    <p class="text-dark">£10,000 <small class="text-body">الهدف</small></p>
+                                    <p class="text-dark">£9,542 <small class="text-body">تم توفير</small></p>
+                                </div>
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
+                                        aria-valuemax="100">
+                                        <span>70%</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="position-relative mt-auto">
+                            <img class="img-fluid" src="img/images/activte/20230215125851.jpg" alt="">
+                            <div class="causes-overlay">
+                                <a class="btn btn-outline-primary" href="">
+                                    اقراء المزيد
+                                    <div class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2">
+                                        <i class="fa fa-arrow-left"></i>
+                                    </div>
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
-                
-                <!-- <div class="col-lg-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.3s">
-                    <div class="training-item">
-                        <div class="training-inner">
-                            <img src="img/training-2.jpg" class="img-fluid w-100 rounded" alt="Image">
-                            <div class="training-title-name">
-                                <a href="#" class="h4 text-white mb-0">TOEFL</a>
-                                <a href="#" class="h4 text-white mb-0">Coaching</a>
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+                    <div
+                        class="causes-item d-flex flex-column bg-white border-top border-5 border-primary rounded-top overflow-hidden h-100">
+                        <div class="text-center p-4 pt-0">
+                            <div class="d-inline-block bg-primary text-white rounded-bottom fs-5 pb-1 px-3 mb-4">
+                                <small>كفالات أسر المرضى</small>
+                            </div>
+                            <h5 class="mb-3" style="
+                                                background-color: #ededed;
+                                                margin: 0px;
+                                                padding: 10px;
+                                                border-radius: 9px;">
+                                كفالات أسر المرضى
+                            </h5>
+                            <p>تقديم خدمة تكاملية للمرضى وتسعى لتحسين الحياة</p>
+                            <div class="causes-progress bg-light p-3 pt-2">
+                                <div class="d-flex justify-content-between">
+                                    <p class="text-dark">$10,000 <small class="text-body">الهدف</small></p>
+                                    <p class="text-dark">$9,542 <small class="text-body">تم توفير</small></p>
+                                </div>
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0"
+                                        aria-valuemax="100">
+                                        <span>90%</span>
+                                    </div>
+                                </div>
                             </div>
                         </div>
-                        <div class="training-content bg-secondary rounded-bottom p-4">
-                            <a href="#">
-                                <h4 class="text-white">TOEFL Coaching</h4>
-                            </a>
-                            <p class="text-white-50">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem,
-                                veritatis.</p>
-                            <a class="btn btn-secondary rounded-pill text-white p-0" href="#">Read More <i
-                                    class="fa fa-arrow-right"></i></a>
-                        </div>
-                    </div>
-                </div> -->
-
-                <!-- <div class="col-lg-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.5s">
-                    <div class="training-item">
-                        <div class="training-inner">
-                            <img src="img/training-3.jpg" class="img-fluid w-100 rounded" alt="Image">
-                            <div class="training-title-name">
-                                <a href="#" class="h4 text-white mb-0">PTE</a>
-                                <a href="#" class="h4 text-white mb-0">Coaching</a>
+                        <div class="position-relative mt-auto">
+                            <img class="img-fluid" src="img/images/activte/20230215130257.jpg" alt="">
+                            <div class="causes-overlay">
+                                <a class="btn btn-outline-primary" href="">
+                                    أقراء المزيد
+                                    <div class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2">
+                                        <i class="fa fa-arrow-left"></i>
+                                    </div>
+                                </a>
                             </div>
-                        </div>
-                        <div class="training-content bg-secondary rounded-bottom p-4">
-                            <a href="#">
-                                <h4 class="text-white">PTE Coaching</h4>
-                            </a>
-                            <p class="text-white-50">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem,
-                                veritatis.</p>
-                            <a class="btn btn-secondary rounded-pill text-white p-0" href="#">Read More <i
-                                    class="fa fa-arrow-right"></i></a>
-                        </div>
-                    </div>
-                </div> -->
-                
-                <!-- <div class="col-lg-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.7s">
-                    <div class="training-item">
-                        <div class="training-inner">
-                            <img src="img/training-4.jpg" class="img-fluid w-100 rounded" alt="Image">
-                            <div class="training-title-name">
-                                <a href="#" class="h4 text-white mb-0">OET</a>
-                                <a href="#" class="h4 text-white mb-0">Coaching</a>
-                            </div>
-                        </div>
-                        <div class="training-content bg-secondary rounded-bottom p-4">
-                            <a href="#">
-                                <h4 class="text-white">OET Coaching</h4>
-                            </a>
-                            <p class="text-white-50">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem,
-                                veritatis.</p>
-                            <a class="btn btn-secondary rounded-pill text-white p-0" href="#">Read More <i
-                                    class="fa fa-arrow-right"></i></a>
                         </div>
                     </div>
                 </div>
-                <div class="col-12 text-center">
-                    <a class="btn btn-primary border-secondary rounded-pill py-3 px-5 wow fadeInUp" data-wow-delay="0.1s"
-                        href="#">View More</a>
-                </div> -->
-
             </div>
         </div>
     </div>
-    <!-- Training End -->
+    <!-- Causes End -->
+
 
 <!-- Footer Start -->
-<div class="container-fluid bg-dark text-white-50 footer pt-5 wow fadeIn" data-wow-delay="0.1s">
+<div class="container-fluid bg-dark text-white-50 footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
     <div class="container py-5">
         <div class="row g-5">
             <div class="col-lg-3 col-md-6">
@@ -304,24 +345,19 @@
                     &copy; <a href="#">جمعية مهندسى البترول والتعدين والغاز</a>, كل الحقوق محفوظة.
                 </div>
                 <!--  <div class="col-md-6 text-center text-md-end">
-                            Designed By <a href="#"></a>
-                        </div> -->
+                                Designed By <a href="#"></a>
+                            </div> -->
             </div>
         </div>
     </div>
 </div>
 <!-- Footer End -->
 
-
 <!-- Back to Top -->
-<a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"
-        style="color: #040000;;"></i></a>
-
-
+<a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
 
 
 <!-- JavaScript Libraries -->
-<script src="lib/counterup/counterup.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="lib/wow/wow.min.js"></script>
@@ -330,21 +366,9 @@
 <script src="lib/owlcarousel/owl.carousel.min.js"></script>
 <script src="lib/parallax/parallax.min.js"></script>
 
-<!-- JavaScript Libraries 2 -->
-<script src="agency-lib/agency-wow/wow.min.js"></script>
-<script src="agency-lib/agency-easing/easing.min.js"></script>
-<script src="agency-lib/agency-waypoints/waypoints.min.js"></script>
-<script src="agency-lib/agency-owlcarousel/owl.carousel.min.js"></script>
-<script src="agency-lib/agency-isotope/isotope.pkgd.min.js"></script>
-<script src="agency-lib/agency-lightbox/js/lightbox.min.js"></script>
-<!-- End JavaScript Libraries 2 -->
-
-
-
 <!-- Template Javascript -->
-<script src="agency-js/agency-main.js"></script>
-<script src="js/count.js"></script>
 <script src="js/main.js"></script>
+
 </body>
 
 </html>
