--- a/blog.html
+++ b/blog.html
@@ -97,7 +97,7 @@
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">المساعدات</a>
                         <div class="dropdown-menu m-0">
-                            <a href="#" class="dropdown-item"> المشروعات</a>
+                            <a href="Projects.html" class="dropdown-item"> المشروعات</a>
                             <a href="#" class="dropdown-item">المبادرات</a>
                         </div>
                     </div>
@@ -179,10 +179,13 @@
                         <div class="p-4">
                             <div class="d-flex mb-3">
                                 <small class="me-3"><i class="far fa-user text-primary me-2"></i> المسوال الاول </small>
-                                <small><i class="far fa-calendar-alt text-primary me-2"></i> 01 Jan, 2045 </small>
+                                <small><i class="far fa-calendar-alt text-primary me-2"></i> 02 Jan, 2025 </small>
                             </div>
-                            <h4 class="mb-3">How to build a website</h4>
-                            <p>Dolor et eos labore stet justo sed est sed sed sed dolor stet amet</p>
+                            <h4 class="mb-3">عقد المهندس محمد شيمي، وزير قطاع الأعمال العام</h4>
+                            <p>
+                            عقد المهندس محمد شيمي، وزير قطاع الأعمال العام، لقاءً مثمرًا مع المهندس محمد كمال عليم، رئيس مجلس إدارة جمعية مهندسي
+                            البترول والتعدين والغاز، ورئيس مؤسسة مصر للدفاع عن حقوق الإنسان. 
+                            </p>
                             <a class="text-uppercase" href=""> أقراء المزيد <i class="bi bi-arrow-left"></i></a>
                         </div>
                     </div>
