add new page  blog-qitae-alaiemal

--- a/blog-qitae-alaiemal.html
+++ b/blog-qitae-alaiemal.html
@@ -126,20 +126,20 @@
     </div>
     <!-- Navbar End -->
 
-<!-- Page Header Start -->
-<div class="container-fluid page-header-blog mb-5 wow fadeIn" data-wow-delay="0.1s">
-    <div class="container text-center" style="direction: ltr;">
-        <h1 class="display-4 text-white animated slideInDown mb-4"> الاخبار</h1>
-        <nav aria-label="breadcrumb animated slideInDown">
-            <ol class="breadcrumb justify-content-center mb-0">
-                <li class="breadcrumb-item text-primary active" aria-current="page">الاخبار</li>
-                <li class="breadcrumb-item"><a class="text-white" href="#"> المركز الاعلامى</a></li>
-                <li class="breadcrumb-item"><a class="text-white" href="#">الصفحة الرئيسية</a></li>
-            </ol>
-        </nav>
+    <!-- Page Header Start -->
+    <div class="container-fluid page-header-blog mb-5 wow fadeIn" data-wow-delay="0.1s">
+        <div class="container text-center" style="direction: ltr;">
+            <h1 class="display-4 text-white animated slideInDown mb-4"> الاخبار</h1>
+            <nav aria-label="breadcrumb animated slideInDown">
+                <ol class="breadcrumb justify-content-center mb-0">
+                    <li class="breadcrumb-item text-primary active" aria-current="page">الاخبار</li>
+                    <li class="breadcrumb-item"><a class="text-white" href="#"> المركز الاعلامى</a></li>
+                    <li class="breadcrumb-item"><a class="text-white" href="#">الصفحة الرئيسية</a></li>
+                </ol>
+            </nav>
+        </div>
     </div>
-</div>
-<!-- Page Header End -->
+    <!-- Page Header End -->
 
 
     <!-- Blog Area Start-->
@@ -155,48 +155,30 @@
                     <div class="blog_left_sidebar">
                         <article class="blog_item">
                             <div class="blog_item_img">
-                                <img class="card-img rounded-0" src="img/images/blog/img_2396 (1).jpg" alt="">
+                                <img class="card-img rounded-0" src="img/images/blog/472951345_122115167918690116_7875804610822819039_n.jpg" alt="">
                                 <a href="#" class="blog_item_date">
-                                    <h3>15</h3>
+                                    <h3>6</h3>
                                     <p>Jan</p>
                                 </a>
                             </div>
                             <div class="blog_details">
                                 <a class="d-inline-block" href="blog_details.html">
                                     <h2 class="blog-head" style="color: #2d2d2d;">
-                                        اتحاد القوى المدنية
+                                    عقد المهندس محمد شيمي، وزير قطاع الأعمال العام، لقاءً مثمرًا مع المهندس محمد كمال عليم، رئيس مجلس إدارة جمعية مهندسي
+                                    البترول والتعدين والغاز
                                     </h2>
                                 </a>
                                 <p>
-                                فضيلة الشيخ أحمد ترك والوزير طارق مهدى يدشنان أتحاد القوى المدنية لمنظمات المجتمع المدنى للعمل العام وتنمية المجتمع لدعم
-                                الاسر الفقيرة والمهمشة
-                                فى حفل بهيج بفندق دار حرس الحدود أحتفل مجلس أمناء أتحاد القوى المدنية لمنظمات المجتمع المدنى للعمل العام وتنمية المجتمع
-                                برئاسة فضيلة الدكتور الشيخ أحمد ترك الرئيس التنفيذى لدعم الاسر الفقيرة والمهمشة وبحضور معالى الوزير اللواء طارق مهدى
-                                قائد أركان قوات الدفاع الجوى عضو المجلس العسكرى ومحافظ الاسكندرية الاسبق وعضو مجلس أمناء أتحاد القوى المدنية واللواء
-                                محمود حسين الفص مجموعة المخابرات والامن الحربى والرئيس التنفيذى لمجلس أتحاد القوى المدنية لمنظمات المجتمع المدنى
-                                والدكتور ذكاء معوض الامين العام لمجلس أتحاد القوى المدنية لمنظمات المجتمع المدنى والمهندس حاتم سرحان رئيس جمعية مهندسى
-                                البترول والتعدين والغاز والجيولوجى الكبير خالد حمدان رئيس شركة بترول خليج السويس (جابكو) الاسبق والمهندس المحترم الكبير
-                                صبرى الشرقاوى المدير العام لشركة الوسطانى للبترول والمهندس أسامه البغدادى رئيس شركة بترول جنوب ابوزنيمة والمهندس وليد
-                                الشرقاوى رئيس شركة أوتاك للتجارة والصناعة كما شرف الحضور الاستاذ العظيم ايهاب مصطفى من وزارة التضامن الاجتماعى مدير عام
-                                مدرية التضامن الاجتماعى بمصر الجديدة والدكتورة المحترمة عزة حسن المدير العام لأدارة الجمعيات والمؤسسات والاستاذة دينا
-                                حسين رئيس قسم أدارة الجمعيات والمؤسسات وقد قام فضيلة الدكتور الشيخ احمد ترك يرافقة اللواء محمود الفص مجموعة المخابرات
-                                والامن الحربى سابقاً والرئيس التنفيذى لأتحاد القوى المدنية لمنظمات ورئيس مؤسسة مصر للدفاع عن حقوق الانسان والدكتور ذكاء
-                                معوض معالى الامين العام لأتحاد القوى المدنية لمنظمات المجتمع المدنى بتقديم أوسمة تكريم إلى بعض رموز وزراة التضامن
-                                الاجتماعى وعلى رأسهم : الاستاذ المحترم ايهاب مصطفى والاستاذة عزة حسن ذلك تقديراً وعرفاناً لما بذولة من جهد كبير فى نجاح
-                                تلك المؤسسات كما تم تكريم الوزير اللواء العظيم المحترم طارق مهدى محافظ الاسكندرية الاسبق وعضو مجلس امناء أتحاد القوى
-                                المدنية لمنظمات المجتمع المدنى وكما حضر الاجتماع اللواء ممدوح الحصرى فرع الامداد والتموين بالقوات المسلحة وزوجتة
-                                الدكتورة ريهام العاصى رئيس الاتحاد العربى للتنمية الاجتماعية وعضو مجلس أدارة أتحاد قيادات المرأة العربية بجامعة الدول
-                                العربية ، والاستاذة نسرين فتحى أبو عجيزة مدير عام مساعد التنمية المجتمعية بشركة بدر الدين للبترول ، والاستاذ حاتم حسين
-                                مدير عام بشركة صان مصر والاستاذ سمير عثمان مساعد رئيس شركة الوسطانى الاسبق والاستاذ خيرى عبدالسلام مدير عام بشركة وادى
-                                السهل للبترول ، والاستاذ فؤاد عبدالوهاب مدير عام بشركة بتروتريد ، والاستاذ ماهر بدر الصحفى بجريدة العالم اليوم والاستاذ
-                                أسلام جمال الصحفى براديو النيل ، الاستاذ أسماعيل رأفت من جريدة اليوم السابع ، الاستاذ أشرف سيد مساعد رئيس تحرير جريدة
-                                الاهرام والاستاذ نزار سلامة رئيس تحرير الرأى العربى الاستاذة هبة منصور جريدة الكرامة والاستاذ أمير خالد جريدة البوابة
-                                والاستاذة منى عطية مساعد تنفيذى المدير العام ومنسق المسئولية المجتمعية دانا غاز مصر والاستاذ المحترم خالد عوض مساعد رئيس
-                                شركة بدر الدين للبترول للشئون القانونية ، الاستاذة هبة عبدالعزيز المذيعة والكاتبة الصحفية ، الاستاذة الصحفية حسناء رفعت
-                                بجريدة الطريق والاعلامى زياد كمال بمجلة البترول العربى بالمملكة المتحدة – لنددن ، الصحفية والاعلامية منى ماجد الامين
-                                العام المساعد ومدير مكتب مؤسسة مصر للدفاع عن حقوق الانسان بفلسطين والمشرف على الصندوق الاعانات لدعم ضحايا الاسر
-                                الفلسطينية ، الصحفية والاعلامية ديما احمد الامين العام المساعد ومدير مؤسسة مصر للدفاع عن حقوق الانسان بلبنان والمشرف على
-                                صندوق الاعانات لدعم لبنان..... وأخرين .
+                                عقد المهندس محمد شيمي، وزير قطاع الأعمال العام، لقاءً مثمرًا مع المهندس محمد كمال عليم، رئيس مجلس إدارة جمعية مهندسي
+                                البترول والتعدين والغاز، ورئيس مؤسسة مصر للدفاع عن حقوق الإنسان. جاء اللقاء بهدف استعراض جهود وإنجازات الجمعية ودورها
+                                الحيوي في دعم قضايا المجتمع المدني، مع التركيز على القضايا ذات الأهمية الكبيرة مثل تعزيز التعليم، ومحاربة الأمية،
+                                والتخفيف من الأعباء الاجتماعية على الفئات الأكثر احتياجًا في المجتمع.
+                                وأشاد المهندس محمد كمال عليم خلال اللقاء بإسهامات الجمعية المتنوعة، حيث نجحت في كفالة أكثر من 15,000 أسرة بتقديم مخصصات
+                                مالية شهرية للفئات المهمشة والفقيرة، إضافة إلى تمويل علاج ما يزيد عن 78,000 حالة من الحالات الإنسانية. هذه الجهود تؤكد
+                                الالتزام الراسخ للجمعية بدعم الفئات الأكثر ضعفًا والعمل على تحقيق العدالة الاجتماعية.
+                                كما عبَّر المهندس محمد كمال عن تقديره للمهندس محمد شيمي، مشيرًا إلى أن هذا اللقاء كان فرصة لتبادل الرؤى والأفكار وتقديم
+                                مقترحات من شأنها تحسين السياسات الاجتماعية والاقتصادية. وأكد أن الوزير محمد شيمي يُعدُّ نموذجًا للقيادة المتميزة، نظرًا
+                                لدوره البارز في خدمة الوطن
                                 </p>
                                 <ul class="blog-info-link">
                                     <li><a href="#"><i class="fa fa-user"></i> المسؤال الاول</a></li>
@@ -298,7 +280,8 @@
                                 </div>
                             </div>
                             <div class="media post_item">
-                                <img class="img-fluid" src="img/images/Recent Post/0865cd63-eb41-4bda-afcb-a0fcbd40ce96.png" alt="post">
+                                <img class="img-fluid"
+                                    src="img/images/Recent Post/0865cd63-eb41-4bda-afcb-a0fcbd40ce96.png" alt="post">
                                 <div class="media-body">
                                     <a href="blog_details.html">
                                         <h3 style="color: #2d2d2d;">The Amazing Hubble</h3>
@@ -307,7 +290,8 @@
                                 </div>
                             </div>
                             <div class="media post_item">
-                                <img class="img-fluid" src="img/images/Recent Post/35875426-29c0-4c2d-b83d-fe67919aa408.png" alt="post">
+                                <img class="img-fluid"
+                                    src="img/images/Recent Post/35875426-29c0-4c2d-b83d-fe67919aa408.png" alt="post">
                                 <div class="media-body">
                                     <a href="blog_details.html">
                                         <h3 style="color: #2d2d2d;">Astronomy Or Astrology</h3>
@@ -316,7 +300,8 @@
                                 </div>
                             </div>
                             <div class="media post_item">
-                                <img class="img-fluid" src="img/images/Recent Post/d15331e2-ab82-4c3d-810c-6206bf6afe6e.png" alt="post">
+                                <img class="img-fluid"
+                                    src="img/images/Recent Post/d15331e2-ab82-4c3d-810c-6206bf6afe6e.png" alt="post">
                                 <div class="media-body">
                                     <a href="blog_details.html">
                                         <h3 style="color: #2d2d2d;">Asteroids telescope</h3>
@@ -326,7 +311,7 @@
                             </div>
                         </aside>
 
-                       <!--  <aside class="single_sidebar_widget tag_cloud_widget">
+                        <!--  <aside class="single_sidebar_widget tag_cloud_widget">
                             <h4 class="widget_title" style="color: #2d2d2d;">Tag Clouds</h4>
                             <ul class="list">
                                 <li>
@@ -361,7 +346,8 @@
                             <ul class="instagram_row flex-wrap">
                                 <li>
                                     <a href="#">
-                                        <img class="img-fluid" src="img/images/ehtfalat/0865cd63-eb41-4bda-afcb-a0fcbd40ce96.jpg" alt="">
+                                        <img class="img-fluid"
+                                            src="img/images/ehtfalat/0865cd63-eb41-4bda-afcb-a0fcbd40ce96.jpg" alt="">
                                     </a>
                                 </li>
                                 <li>
@@ -391,7 +377,7 @@
                                 </li>
                             </ul>
                         </aside>
-                        
+
                     </div>
                 </div>
             </div>
