--- a/blog.html
+++ b/blog.html
@@ -161,9 +161,11 @@
                             </div>
                             <h4 class="mb-3">اتحاد القوى المدنية</h4>
                             <p>
+                                فضيلة الشيخ أحمد ترك والوزير طارق مهدى يدشنان أتحاد القوى المدنية لمنظمات المجتمع المدنى للعمل العام وتنمية المجتمع لدعم
+                                الاسر الفقيرة والمهمشة
                                 فى حفل بهيج بفندق دار حرس الحدود أحتفل مجلس أمناء أتحاد القوى المدنية لمنظمات المجتمع المدنى للعمل العام وتنمية المجتمع
                                 برئاسة فضيلة الدكتور الشيخ أحمد ترك الرئيس التنفيذى لدعم الاسر الفقيرة والمهمشة وبحضور معالى الوزير اللواء طارق مهدى
-                                قائد أركان قوات الدفاع الجوى عضو المجلس العسكرى ومحافظ الاسكندرية الاسبق وعضو مجلس أمناء أتحاد القوى المدنية
+                                 محمود حسين الفص مجموعة المخابرات والامن الحربى والرئيس التنفيذى لمجلس أتحاد القوى المدنية لمنظمات المجتمع المدنى
                             </p>
                             <a class="text-uppercase" href="blog-aitihad-alqiwaa.html"> أقراء المزيد <i class="bi bi-arrow-left"></i></a>
                         </div>
@@ -173,20 +175,24 @@
                 <div class="col-lg-4 wow slideInUp" data-wow-delay="0.6s">
                     <div class="blog-item bg-light rounded overflow-hidden">
                         <div class="blog-img position-relative overflow-hidden">
-                            <img class="img-fluid" src="img/images/ehtfalat/35875426-29c0-4c2d-b83d-fe67919aa408.jpg" alt="">
+                            <img class="img-fluid" src="img/images/news/472951345_122115167918690116_7875804610822819039_n.jpg" alt="">
                            <!--  <a class="position-absolute top-0 start-0 bg-primary text-white rounded-end mt-5 py-2 px-4" href="">Web Design</a> -->
                         </div>
                         <div class="p-4">
                             <div class="d-flex mb-3">
-                                <small class="me-3"><i class="far fa-user text-primary me-2"></i> المسوال الاول </small>
-                                <small><i class="far fa-calendar-alt text-primary me-2"></i> 02 Jan, 2025 </small>
+                                <small class="me-3"><i class="far fa-user text-primary me-2"></i> المسؤال الاول </small>
+                                <small><i class="far fa-calendar-alt text-primary me-2"></i> 06 Jan, 2025 </small>
                             </div>
-                            <h4 class="mb-3">عقد المهندس محمد شيمي، وزير قطاع الأعمال العام</h4>
+                            <h4 class="mb-3">
+                                عقد المهندس محمد شيمي، وزير قطاع الأعمال العام، لقاءً مثمرًا مع المهندس محمد كمال عليم، رئيس مجلس إدارة جمعية مهندسي
+                                البترول والتعدين والغاز
+                            </h4>
                             <p>
                             عقد المهندس محمد شيمي، وزير قطاع الأعمال العام، لقاءً مثمرًا مع المهندس محمد كمال عليم، رئيس مجلس إدارة جمعية مهندسي
-                            البترول والتعدين والغاز، ورئيس مؤسسة مصر للدفاع عن حقوق الإنسان. 
+                            البترول والتعدين والغاز، ورئيس مؤسسة مصر للدفاع عن حقوق الإنسان. جاء اللقاء بهدف استعراض جهود وإنجازات الجمعية ودورها
+                            الحيوي في دعم قضايا المجتمع المدني.
                             </p>
-                            <a class="text-uppercase" href=""> أقراء المزيد <i class="bi bi-arrow-left"></i></a>
+                            <a class="text-uppercase" href="blog-qitae-alaiemal.html"> أقراء المزيد <i class="bi bi-arrow-left"></i></a>
                         </div>
                     </div>
                 </div>
