add new page Donate

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                             <a href="#" class="dropdown-item">المبادرات</a>
                         </div>
                     </div>
-                    <a href="#" class="nav-item nav-link"> تبرع الان</a>
+                    <a href="Donate.html" class="nav-item nav-link"> تبرع الان</a>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"> من نحن</a>
                         <div class="dropdown-menu m-0">
