--- a/madinat-alkhayr.html
+++ b/madinat-alkhayr.html
@@ -129,12 +129,12 @@
     <!-- Page Header Start -->
     <div class="container-fluid page-header-madinat mb-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container text-center" style="direction: ltr;">
-            <h1 class="display-4 text-white animated slideInDown mb-4"> مشروع مدينة الخير</h1>
+            <h1 class="display-4 text-blue animated slideInDown mb-4"> مشروع مدينة الخير</h1>
             <nav aria-label="breadcrumb animated slideInDown">
                 <ol class="breadcrumb justify-content-center mb-0">
                     <li class="breadcrumb-item text-primary active" aria-current="page"> مدينة الخير </li>
-                    <li class="breadcrumb-item"><a class="text-white" href="#">حالات تحتاج إلى مشاركتك بالمال</a></li>
-                    <li class="breadcrumb-item"><a class="text-white" href="#">مشروعات</a></li>
+                    <li class="breadcrumb-item"><a class="text-blue" href="#">حالات تحتاج إلى مشاركتك بالمال</a></li>
+                    <li class="breadcrumb-item"><a class="text-blue" href="#">مشروعات</a></li>
                 </ol>
             </nav>
         </div>
