--- a/blog.html
+++ b/blog.html
@@ -101,7 +101,7 @@
                             <a href="#" class="dropdown-item">المبادرات</a>
                         </div>
                     </div>
-                    <a href="#" class="nav-item nav-link"> تبرع الان</a>
+                    <a href="Donate.html" class="nav-item nav-link"> تبرع الان</a>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"> من نحن</a>
                         <div class="dropdown-menu m-0">
@@ -126,14 +126,14 @@
     <!-- Navbar End -->
 
     <!-- Page Header Start -->
-    <div class="container-fluid page-header-blog mb-5 wow fadeIn" data-wow-delay="0.1s">
+    <div class="container-fluid page-header mb-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container text-center" style="direction: ltr;">
-            <h1 class="display-4 text-white animated slideInDown mb-4"> الاخبار</h1>
+            <h1 class="display-4 text-blue animated slideInDown mb-4"> الاخبار</h1>
             <nav aria-label="breadcrumb animated slideInDown">
                 <ol class="breadcrumb justify-content-center mb-0">
                     <li class="breadcrumb-item text-primary active" aria-current="page">الاخبار</li>
-                    <li class="breadcrumb-item"><a class="text-white" href="#"> المركز الاعلامى</a></li>
-                    <li class="breadcrumb-item"><a class="text-white" href="#">الصفحة الرئيسية</a></li>
+                    <li class="breadcrumb-item"><a class="text-blue" href="#"> المركز الاعلامى</a></li>
+                    <li class="breadcrumb-item"><a class="text-blue" href="#">الصفحة الرئيسية</a></li>
                 </ol>
             </nav>
         </div>
