--- a/objectives.html
+++ b/objectives.html
@@ -98,7 +98,7 @@
                             <a href="#" class="dropdown-item">المبادرات</a>
                         </div>
                     </div>
-                    <a href="#" class="nav-item nav-link"> تبرع الان</a>
+                    <a href="Donate.html" class="nav-item nav-link"> تبرع الان</a>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"> من نحن</a>
                         <div class="dropdown-menu m-0">
@@ -126,12 +126,12 @@
     <!-- Page Header Start -->
     <div class="container-fluid page-header-objectives mb-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container text-center" style="direction: ltr;">
-            <h1 class="display-4 text-white animated slideInDown mb-4"> أهداف الجمعية</h1>
+            <h1 class="display-4 text-blue animated slideInDown mb-4"> أهداف الجمعية</h1>
             <nav aria-label="breadcrumb animated slideInDown">
                 <ol class="breadcrumb justify-content-center mb-0">
                     <li class="breadcrumb-item text-primary active" aria-current="page"> أهداف الجمعية</li>
-                    <li class="breadcrumb-item"><a class="text-white" href="#">من نحن</a></li>
-                    <li class="breadcrumb-item"><a class="text-white" href="#">الرئيسية</a></li>
+                    <li class="breadcrumb-item"><a class="text-blue" href="#">من نحن</a></li>
+                    <li class="breadcrumb-item"><a class="text-blue" href="#">الرئيسية</a></li>
                 </ol>
             </nav>
         </div>
