update for page Donate

--- a/Donate.html
+++ b/Donate.html
@@ -161,15 +161,16 @@
                             </div>
                             <div class="office-content d-flex flex-column">
                                 <h4 class="mb-2"> رقم الحساب الدولى (IBAN)</h4>
-                                <a href="#" class="text-secondary fs-5 mb-2">
+                                <h6  class="text-secondary fs-5 mb-2">
                                     870003000130708023572010150
-                                <i class="fas fa-pound-sign"></i> (مصرى)</a>
-                                <a href="#" class="text-secondary fs-5 mb-2">
+                                <i class="fas fa-pound-sign"></i> (مصرى)</h6>
+                                <h6 href="#" class="text-secondary fs-5 mb-2">
                                     410003000130708023572020290
-                                <i class="fas fa-dollar-sign"></i> (دولار)</a>
-                                <a href="#" class="text-muted fs-5 mb-2">info@spe-egypt.com</a>
-                                <p class="mb-0">123, First Floor, 123 St Roots Terrace, Los Angeles 90010 Unitd States of
-                                    America.</p>
+                                <i class="fas fa-dollar-sign"></i> (دولار)</h6>
+
+                                <a href="info@spe-egypt.com" class="text-muted fs-5 mb-2">info@spe-egypt.com</a>
+                               <!--  <p class="mb-0">123, First Floor, 123 St Roots Terrace, Los Angeles 90010 Unitd States of
+                                    America.</p> -->
                             </div>
                         </div>
                     </div>
