--- a/objectives.html
+++ b/objectives.html
@@ -124,7 +124,7 @@
 
 
     <!-- Page Header Start -->
-    <div class="container-fluid page-header-objectives mb-5 wow fadeIn" data-wow-delay="0.1s">
+    <div class="container-fluid page-header mb-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container text-center" style="direction: ltr;">
             <h1 class="display-4 text-blue animated slideInDown mb-4"> أهداف الجمعية</h1>
             <nav aria-label="breadcrumb animated slideInDown">
