--- a/index.html
+++ b/index.html
@@ -312,8 +312,8 @@
                         <div class="portfolio-overlay">
                             <a class="btn btn-light" href="img/images/Projects/3-3.png.webp" data-lightbox="portfolio"></a>
                             <div class="mt-auto">
-                                <small class="text-white"><i class="fa fa-folder me-2"></i>عن المشروع</small>
-                                <a class="h5 d-block text-white mt-1 mb-0" href="">اسم المشروع</a>
+                                <a href="madinat-alkhayr.html"><small class="text-white"><i class="fa fa-folder me-2"></i> </small></a>
+                                <a class="h5 d-block text-white mt-1 mb-0" href=""> اسم المشروع</a>
                             </div>
                         </div>
                     </div>
@@ -321,12 +321,12 @@
 
                 <div class="col-lg-4 col-md-6 py-3 portfolio-item first wow zoomIn" data-wow-delay="0.6s">
                     <div class="position-relative rounded overflow-hidden">
-                        <img class="img-fluid w-100" src="img/images/Projects/7-6-2.png.webp" alt="">
+                        <img class="img-fluid w-100" src="img/images/Projects/hospital.jpeg" alt="">
                         <div class="portfolio-overlay">
-                            <a class="btn btn-light" href="img/images/Projects/7-6-2.png.webp" data-lightbox="portfolio"></a>
+                            <a class="btn btn-light" href="img/images/Projects/hospital.jpeg" data-lightbox="portfolio"></a>
                             <div class="mt-auto">
-                                <small class="text-white"><i class="fa fa-folder me-2"></i>عن المشروع</small>
-                                <a class="h5 d-block text-white mt-1 mb-0" href="">اسم المشروع</a>
+                                <a href="medical-complex.html"><small class="text-white"><i class="fa fa-folder me-2"></i> </small></a>
+                                <a class="h5 d-block text-white mt-1 mb-0" href="medical-complex.html"> مجمع طبي متكامل لخدمة المواطنين </a>
                             </div>
                         </div>
                     </div>
@@ -611,83 +611,7 @@
     </div>
     <!-- Counter Facts End -->
 
-    <!-- About Start -->
-    <div class="container-xxl py-5">
-        <div class="container">
-            <div class="row g-5">
-                <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <div class="position-relative overflow-hidden h-100" style="min-height: 400px;">
-                        <img class="position-absolute w-100 h-100 pt-5 pe-5" src="img/images/img_5(2).png" alt="about" style="object-fit: cover; box-shadow: 0 8px 5px rgb(0 0 0 / 52%);">
-
-                        <img class="position-absolute top-0 end-0 bg-white" src="img/images/videos/Screenshot20241225191425.png"
-                            alt="" style="width: 200px; height: 200px; box-shadow: 0 8px 5px rgb(0 0 0 / 52%);">
-                        <!--? video_start -->
-                        <div class="position-absolute top-0 end-0 bg-white ps-2 pb-2">
-                            <div class="video-wrap position-relative">
-                                <div class="video-icon"
-                                 style="width: 200px;
-                                  height: 200px;
-                                   background-image: url(/img/images/videos/Screenshot20241225191425.png);
-                                   position: absolute;
-                                   ">
-                                    <a class="popup-video btn-icon" href="img/images/videos/تفاصيل احتفال جمعية مهندسي البترول بنصر أكتوبر_HD.mp4">
-                                        <i class="fas fa-play fa-2x" style="position: relative; top: 80px; right: 70px; color: #ff2300eb;"></i>
-                                        </a>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- video_end -->
-                    </div>
-                </div>
-                <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
-                    <div class="h-100">
-                        <div class="d-inline-block rounded-pill bg-secondary text-primary py-1 px-3 mb-3">من نحن</div>
-                        <h2 class="display-6 mb-5">أهداف جمعية مهندسى البترول والتعدين والغاز (SPE)</h2>
-                        <h4 class="mb-3">تنمية المجتمعات المحلية</h4>
-                        <p class="mb-3">
-                            وذلك بتبنى مشروعات تطوير وتجديد مبانى المدارس الحكومية في المناطق الأكثر احتياجاً في كافة أنحاء الجمهورية والعمل على رفع
-                            كفاءة البيئة المحلية المحيطة بهذه المدارس من طرق ومرافق ورفع كفاءات جميع القائمين على العملية التعليمية من مدرسين
-                            ومديرين بعقد الدورات التدريبية المتخصصة لهم من خلال شركات متخصصة في التدريب وعقد الاتفاقيات والبروتوكلات مع الجهات
-                            المانحة والمشاركة في هذا التطوير والمساهمة في بناء المدارس الحكومية وإمدادها بالأجهزة العلمية والتكنولوجية المتطورة
-                            بإنشاء المركز.
-                        </p>
-                        <p class="mb-3">
-                            كما تشمل تنمية المجتمعات المحلية إقامة الندوات والمؤتمرات لحماية المستهلك والحفاظ على البيئة وتبنى مشروعات التشجير
-                            والتجميل والحفاظ على التراث المعمارى والهندسى والتنسيق الحضارى بالإضافة إلى التعاون مع الصندوق الاجتماعى في تنمية
-                            المشروعات الصغيرة في القرى وفى الأرياف للمعاونة على حل مشكلة البطالة.
-                        </p>
-                        <div class="row gy-2 gx-4 mb-4" style="text-align: left;">
-                            <div class="col-sm-6">
-                                <p class="mb-0"> الندوات<i class="fa fa-arrow-right text-primary me-2"></i></p>
-                            </div>
-                            <div class="col-sm-6">
-                                <p class="mb-0"> المحاضرات<i class="fa fa-arrow-right text-primary me-2"></i></p>
-                            </div>
-                            <div class="col-sm-6">
-                                <p class="mb-0">المجال الاجتماعى<i class="fa fa-arrow-right text-primary me-2"></i></p>
-                            </div>
-                            <div class="col-sm-6">
-                                <p class="mb-0">التأهيل والتشغيل<i class="fa fa-arrow-right text-primary me-2"></i></p>
-                            </div>
-                            <div class="col-sm-6">
-                                <p class="mb-0">الخدمات الصحية<i class="fa fa-arrow-right text-primary me-2"></i></p>
-                            </div>
-                            <div class="col-sm-6">
-                                <p class="mb-0">التوعية الجماهيرية<i class="fa fa-arrow-right text-primary me-2"></i></p>
-                            </div>
-                        </div>
-                        <a class="btn btn-primary py-2 px-3 me-3" href="objectives.html">
-                            اقراء المزيد
-                            <div class="d-inline-flex btn-sm-square bg-white text-primary rounded-circle ms-2">
-                                <i class="fa fa-arrow-left"></i>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- About End -->
+  
 
      <!-- Seminars Start -->
      <div class="container-xxl py-5" style="background: #F8F8F9;">
